[gd_scene load_steps=12 format=4 uid="uid://djly2h2jcl2kh"]

[ext_resource type="Script" path="res://world.gd" id="1_d12hr"]
[ext_resource type="Texture2D" uid="uid://cta14ng6ojwy3" path="res://icon.svg" id="1_f5boq"]
[ext_resource type="PackedScene" uid="uid://dkitvpr4dba28" path="res://wizard/wizard.tscn" id="2_61scl"]
[ext_resource type="PackedScene" uid="uid://b2vxgw0eolsfr" path="res://enemy/base_enemy.tscn" id="3_mgd26"]
[ext_resource type="Texture2D" uid="uid://m1niuarjqsgq" path="res://dirt_tile.png" id="4_m1t8j"]
[ext_resource type="PackedScene" uid="uid://cvlivrphp416p" path="res://cauldron/cauldron.tscn" id="5_4m26d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_scnr5"]
texture = ExtResource("1_f5boq")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b28kv"]
texture = ExtResource("4_m1t8j")
separation = Vector2i(0, 2)
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_2u478"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 5
sources/0 = SubResource("TileSetAtlasSource_scnr5")
sources/1 = SubResource("TileSetAtlasSource_b28kv")

[sub_resource type="Gradient" id="Gradient_5kqja"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_c7pj2"]
gradient = SubResource("Gradient_5kqja")
width = 50

[node name="World" type="Node2D"]
script = ExtResource("1_d12hr")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.250072, 0.105533, 0, 1)

[node name="Wizard" parent="." instance=ExtResource("2_61scl")]
position = Vector2(1598, 712)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 58)
tile_map_data = PackedByteArray("AAAAAAcAAQAAAAAAAAABAAcAAQAAAAAAAAACAAcAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAALAAcAAQAAAAAAAAAMAAcAAQAAAAAAAAANAAcAAQAAAAAAAAAOAAcAAQAAAAAAAAD//wcAAQAAAAAAAAD+/wcAAQAAAAAAAAD9/wcAAQAAAAAAAAD8/wcAAQAAAAAAAAD7/wcAAQAAAAAAAAD6/wcAAQAAAAAAAAD5/wcAAQAAAAAAAAD4/wcAAQAAAAAAAAD3/wcAAQAAAAAAAAD2/wcAAQAAAAAAAAD1/wcAAQAAAAAAAAD0/wcAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_2u478")

[node name="BaseEnemy" parent="." instance=ExtResource("3_mgd26")]
position = Vector2(420, 859)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AmmoBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 1832.0
offset_top = 685.0
offset_right = 1882.0
offset_bottom = 1026.0
max_value = 50.0
value = 50.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_c7pj2")

[node name="cauldron" parent="." instance=ExtResource("5_4m26d")]
position = Vector2(818, 904)
element = 3

[connection signal="ammo_used" from="Wizard" to="." method="_on_wizard_ammo_used"]
[connection signal="add_ammo" from="cauldron" to="." method="_on_cauldron_add_ammo"]
[connection signal="change_element" from="cauldron" to="." method="_on_cauldron_change_element"]
